--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
     "@hookform/resolvers": "^2.6.0",
     "@material-ui/core": "^4.11.4",
     "@react-native-async-storage/async-storage": "^1.13.0",
-    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
+    "babel-plugin-inline-dotenv": "^1.6.0",
     "date-fns": "^2.23.0",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
+    "expo-apple-authentication": "~3.1.0",
+    "expo-auth-session": "~3.2.3",
     "expo-font": "~9.1.0",
+    "expo-linear-gradient": "~9.1.0",
+    "expo-random": "~11.1.2",
     "expo-splash-screen": "~0.10.2",
     "expo-updates": "~0.5.4",
     "intl": "^1.2.5",
+    "latest": "^0.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "^7.9.0",
@@ -29,15 +35,16 @@
     "react-native-bouncy-checkbox": "^2.1.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-iphone-x-helper": "^1.3.1",
-    "react-native-reanimated": "^2.2.0",
+    "react-native-reanimated": "~2.1.0",
     "react-native-responsive-fontsize": "^0.5.0",
     "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.4.0",
-    "react-native-svg": "^12.1.1",
+    "react-native-screens": "~3.0.0",
+    "react-native-svg": "12.1.0",
     "react-native-unimodules": "~0.13.3",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.3.0",
+    "version": "^0.1.2",
     "victory-native": "^35.3.3",
     "yup": "^0.32.9"
   },
@@ -48,6 +55,7 @@
     "@types/styled-components-react-native": "^5.1.1",
     "babel-preset-expo": "~8.3.0",
     "jest-expo": "~41.0.0",
+    "react-native-svg-transformer": "^0.14.3",
     "typescript": "~4.0.0"
   },
   "jest": {
