--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@react-native-async-storage/async-storage": "^1.13.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.11",
-    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/native": "^6.0.4",
+    "@react-navigation/stack": "^6.0.9",
     "babel-plugin-inline-dotenv": "^1.6.0",
     "date-fns": "^2.23.0",
     "expo": "~41.0.1",
@@ -37,12 +38,13 @@
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "~2.1.0",
     "react-native-responsive-fontsize": "^0.5.0",
-    "react-native-safe-area-context": "^3.2.0",
+    "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-svg": "12.1.0",
     "react-native-unimodules": "~0.13.3",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.13.12",
+    "react-navigation-stack": "^2.10.4",
     "styled-components": "^5.3.0",
     "version": "^0.1.2",
     "victory-native": "^35.3.3",
